camunda8 - v2/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: docker.io/camunda/keycloak:26.3.2
          args:
            - start
            - --db=postgres
            - --hostname-strict=false
            - --hostname-strict-https=false
            - --proxy=edge
            - --http-enabled=true
            - --import-realm
          ports:
            - name: http
              containerPort: 8080
